Fix congrats text wrapping

--- a/apps/style/craft/style.scss
+++ b/apps/style/craft/style.scss
@@ -734,6 +734,13 @@ $height-to-width: 434 / 477;
     line-height: 27px;
     font-size: 24px;
     color: $lightest_gray;
+
+  }
+  p.congrats {
+    margin-left: 69px;
+  }
+  .failure-feedback p.congrats {
+    margin-left: 0px;
   }
 
   // Video notes
